--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
       "url": "https://github.com/freeformsystems/cli-bin/blob/master/LICENSE"
     }
   ],
+  "directories": {
+    "bin": "./bin",
+    "man": "./man"
+  },
   "keywords": [
     "cli",
     "bin",
@@ -26,7 +30,13 @@
   "dependencies": {
     "cli-command": "^0.8.283",
     "cli-compiler": "^0.1.31",
-    "cli-help": "0.0.12"
+    "cli-help": "0.0.12",
+    "cli-interface": "^1.0.17",
+    "cli-logger": "^0.5.31",
+    "cli-mid-color": "^1.0.7",
+    "cli-mid-logger": "^1.0.3",
+    "cli-mid-manual": "^1.0.6",
+    "ttycolor": "^0.8.13"
   },
   "devDependencies": {
     "chai": "^1.9.1",
