--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
   ],
   "dependencies": {
     "async": "^0.9.0",
-    "cli-command": "^0.8.283",
-    "cli-compiler": "^0.1.31",
-    "cli-fs": "^1.0.4",
-    "cli-help": "0.0.14",
+    "cli-command": "~0.8.294",
+    "cli-compiler": "~0.1.32",
+    "cli-fs": "~1.0.4",
+    "cli-help": "0.0.21",
     "cli-interface": "^1.0.17",
-    "cli-logger": "^0.5.31",
+    "cli-logger": "~0.5.34",
     "cli-mid-color": "^1.0.7",
-    "cli-mid-logger": "^1.0.3",
-    "cli-mid-manual": "^1.0.8",
-    "cli-types": "0.0.8",
+    "cli-mid-logger": "~1.0.4",
+    "cli-mid-manual": "~1.0.15",
+    "cli-types": "~0.1.0",
     "cli-util": "^1.1.26",
     "ttycolor": "^0.8.13"
   },
